# ordinals-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  Procfile  README.md  esbuild.config.js  package-lock.json  package.json  railway.toml  server.json  smithery.yaml  tsconfig.json
.claude-plugin/: marketplace.json
docs/: API-LANDSCAPE.md  ARCHITECTURE.md  DATA-TYPES.md  EXISTING-MCP-SERVERS.md  TOOL-DESIGN.md
reference/: ordiscan-mcp-source.md
site/: index.html  style.css
site/.well-known/mcp/: server-card.json
src/: config.ts  http-server.ts  index.ts  main.rs  ordinals.test.ts  stripe-auth.ts  types.ts
src/cache/: index.ts
src/clients/: hiro.ts  magic-eden.ts  ordiscan.ts
src/rate-limit/: index.ts
src/tools/address/: brc20.ts  inscriptions.ts  rare-sats.ts  runes.ts
src/tools/brc20/: activity.ts  holders.ts  token.ts
src/tools/collections/: info.ts  inscriptions.ts  listings.ts
src/tools/inscriptions/: content.ts  get.ts  search.ts  traits.ts  transfers.ts
src/tools/runes/: activity.ts  holders.ts  info.ts  list.ts  market.ts  unlock.ts
src/tools/sats/: info.ts
src/tools/tx/: inscriptions.ts  runes.ts
