[package]
name = "ordinals-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Bitcoin Ordinals, BRC-20, and Runes -- 23 tools via Hiro, Ordiscan, and Magic Eden APIs"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[dependencies]
psm-mcp-core = { path = "../psm-mcp-core/psm-mcp-core" }
psm-mcp-transport = { path = "../psm-mcp-core/psm-mcp-transport" }
psm-mcp-policy = { path = "../psm-mcp-core/psm-mcp-policy" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
anyhow = "1"
regex = "1"
